Inventory submodules added

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "GrpPayment"]
 	path = GrpPayment
 	url = https://github.com/ahmedgamalelazab/GrpPayment.git
+[submodule "GrpcInventory"]
+	path = GrpcInventory
+	url = https://github.com/ahmedgamalelazab/GrpcInventory
